invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_33.src
.IPPcode24
LT int@49 int@49 int@49